# libcouchbase

./: CMakeLists.txt  Makefile.am  RELEASE_NOTES.markdown  configure.ac  gen-mt-compat.pl
cmake/: config-cmake.h.in  source_files.cmake
config/: gensrclist.pl
contrib/lcb-jsoncpp/: CMakeLists.txt
doc/: Doxyfile  cbc-n1qlback.markdown  cbc-pillowfight.markdown  mainpage.h
include/libcouchbase/: api2.h  api3.h  cntl-private.h  cntl.h  couchbase.h  dcp.h  error.h  iops.h  irq.h  metrics.h  mt-compat.h  mt.h  n1ql.h  q2i.h  views.h
include/memcached/: protocol_binary.h
plugins/io/iocp/: CMakeLists.txt
src/: callbacks.c  cntl.c  connspec.c  connspec.h  dump.c  handler.c  instance.c  internal.h  iofactory.c  irqfd.c  metrics.cc  newconfig.c  nodeinfo.c  retryq.c  settings.c  settings.h  ssobuf.h
src/lcbio/: connect.h  ctx.c  rw-inl.h
src/mc/: mcreq-flush-inl.h  mcreq.c  mcreq.h
src/mcserver/: dcp-internal.h  dcp.c  mcserver-core.c  mcserver-memcached.c  mcserver.c  mcserver.h
src/mt/: CMakeLists.txt  implicit.c  mt-internal.h  mt.c  mt_io_opts.h  plugin-mt.c  wrap-targets.h
src/n1ql/: n1ql.c  params.c
src/operations/: durability-seqno.c  durability.c  durability_internal.h
src/q2i/: q2i.c  query.pb-c.c  query.pb-c.h  query.proto
src/strcodecs/: strcodecs.h  url_encoding.c
src/views/: parser.c  parser.h  viewreq.c  viewreq.h
tests/: CMakeLists.txt  q2i-dummy.cc
tests/iotests/: t_misc.cc  t_netfail.cc
tools/: CMakeLists.txt  cbc-mtbench.cc  cbc-mtwrap.cc  cbc-pillowfight.cc  cbc.cc
tools/docgen/: docgen.h  loc.h  placeholders.h  seqgen.h
