ADD_DEFINITIONS(-DLIBCOUCHBASE_INTERNAL=1)
ADD_LIBRARY(couchbase_mtio SHARED plugin-mt.c)
ADD_LIBRARY(lcbmt OBJECT mt.c implicit.c)
TARGET_LINK_LIBRARIES(couchbase_mtio couchbase_utils)

SET_TARGET_PROPERTIES(couchbase_mtio
    PROPERTIES COMPILE_FLAGS "${CMAKE_C_FLAGS} ${LCB_CORE_CFLAGS}" POSITION_INDEPENDENT_CODE TRUE)
INSTALL(FILES mt_io_opts.h DESTINATION include/libcouchbase/)
